--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -221,6 +221,8 @@ You should now see OpenShift Catalog and a menu `My Project` under the list of p
 ![](./images/10.StartJBDS.jpeg)
 
 
+**Extra Credits:** Figure out how to stop CDK.
+
 
 Congratulations!! You have started CDK and logged into OpenShift Webconsole provided by CDK.
 
