cpu changed to cpus

--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -78,8 +78,8 @@ Let's set the memory to 8GB and CPUs to 2 cores for your virtual machine by runn
 $ minishift config set memory 8192
 No Minishift instance exists. New 'memory' setting will be applied on next 'minishift start'
 
-$ minishift config set cpu 2
-Cannot find property name 'cpu'
+$ minishift config set cpus 2
+No Minishift instance exists. New 'cpus' setting will be applied on next 'minishift start'
 ```
 
 As explained before the entire configuration of your CDK is saved inside `.minishift` folder. Verify your settings in the `.minishift/config/config.json` file.
