updated Lab 1 for Windows

--- a/1.SetupRedHatDevSuite.md
+++ b/1.SetupRedHatDevSuite.md
@@ -52,6 +52,10 @@ Note your credentials (`username` and `password`) as you will need them later.
 
 ### Install Development Suite: 
 
+------------
+
+
+
 **On Mac:**	
 
 Double click on the installer file named `devsuite-2.3.0-GA-bundle-installer-mac.dmg`
@@ -60,19 +64,27 @@ It will open up the installer window. Double click on the `Red Hat Developer Sui
 
 ![](./images/1.DevSuiteMac.jpeg)
 
-**On Windows:**
-Double click on the installer file named `devsuite-2.3.0-GA-bundle-installer.exe`
-** TBD**
-
 The installer will warn you about the content. Click on `Open` button to move forward.
 
 ![](./images/2.DevSuiteMac.jpeg)
+
+
+**On Windows:**
+
+Double click on the installer file named `devsuite-2.3.0-GA-bundle-installer.exe`
+
+Click `Yes` when it asks "Do you want to allow this app to make changes to your device?`
+
+-------------
+
+
+
 
 Click `Next` button to move forward on the next screen
 
 ![](./images/3.DevSuiteMac.jpeg)
 
-Select an installation target folder by clicking on `Browse` or if you are happy with the default location simply press on `Next` and move ahead
+Select an installation target folder by clicking on `Browse` or if you are happy with the default location simply press on `Next` and move ahead. **Note** on windows this default location shows up as `C:\Program Files\Development Suite`
 
 ![](./images/4.DevSuiteMac.jpeg)
 
@@ -82,6 +94,7 @@ Red Hat Development Suite installer can install a bunch of software for you. For
 - Oracle Java (1.8) - if not already installed
 - Red Hat Container Development Kit
 - XHyve Hypervisor - if not already installed
+- Cygwin (2.10.0) - on Windows
 
 We had requested in the prerequisites for this lab that you will need a Java 1.8 and a Hypervisor. If you already have these components installed, they are auto detected by the installer. If not, the installer will add them for you.
 
