added a few notes for Windows users

--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -11,7 +11,10 @@ In this lab, we will start JBDS and set up Red Hat Container Development Kit (CD
 
 Start JBDS (Red Sphere Icon) from your application menu. The application starts up. It will prompt you to select a directory as workspace. You can `Browse` to change the location or just use the default.
 
-**Note** If you have used JBDS or Eclipse before, you may want have conflict. You may have to clean up or use a different location.
+**Note** If you have used JBDS or Eclipse before, you may want have conflict. You may have to clean up or use a different location. 
+
+**Note** On windows this location shows up as `C:\Users\<username>\workspace`
+
 ![](./images/1.StartJBDS.jpeg)
 
 JBDS comes up and you will see the following screen. Spend a couple of minutes to understand the layout.
@@ -37,11 +40,7 @@ CDK runs OpenShift and other components as containers. We have pre-downloaded op
 In order to use these pre-downloaded images let's run some commands from your terminal.
 
 
-************************* 
-**TBD**  Need to verify if CDK automatically adds minishift to executable path on the workstation in order to run the commands below.
-
-**TBD** Verify or provide all the commands for Windows
-**************************
+**Note** On Windows, Development Suite would have installed Cygwin. You can either use Cygwin to run the commands below or copy files using Windows File Explorer.
 
 Let us first run a command to check the images available to minishift
 
@@ -54,6 +53,12 @@ Now let's copy the images. Navigate to the folder you copied from flash drive to
 
 ```
 $ cp -R images ~/.minishift/cache
+```
+
+**On Windows** If you are using Cygwin, you may have to provide complete path as below:
+
+```
+$ cp -R images c:/users/<yourusername>/.minishift/cache
 ```
 
 Now run check the images list again. This time it should display a bunch of images as shown below. If you did not copy these images, minishift/cdk will try to download them from Red Hat's registry on the fly and that may take a lot of time depending on the bandwidth. But if you are at home, you should be fine.
@@ -110,6 +115,12 @@ $ cat ~/.minishift/config/config.json
 }
 
 ```
+**On Windows** the vm-driver will show up as `hyperv`. If you have Oracle Virtual Box installed, it may show up as `virtualbox`. Also you can change the vm-driver to `virtualbox` by running the following command
+
+```
+$ minishift config set vm-driver virtualbox
+```
+
 
 ### Start CDK
 
