Added RHEL 7 install instructions

--- a/1.SetupRedHatDevSuite.md
+++ b/1.SetupRedHatDevSuite.md
@@ -75,6 +75,33 @@ Double click on the installer file named `devsuite-2.3.0-GA-bundle-installer.exe
 
 Click `Yes` when it asks "Do you want to allow this app to make changes to your device?`
 
+** On RHEL:**
+
+Make sure you're subscribed to the proper channels
+
+```
+subscription-manager repos --disable=*
+subscription-manager repos --enable=rhel-7-server-rpms \
+--enable rhel-7-server-devtools-rpms \
+--enable rhel-server-rhscl-7-rpms \
+--enable rhel-7-server-extras-rpms \
+--enable rhel-7-server-optional-rpms
+```
+
+Next, add the Red Hat Developer Tools key to your system
+
+```
+cd /etc/pki/rpm-gpg
+wget -O RPM-GPG-KEY-redhat-devel https://www.redhat.com/security/data/a5787476.txt
+rpm --import RPM-GPG-KEY-redhat-devel
+```
+
+Now you can install the developer suite
+
+```
+yum -y install rh-devsuite rh-eclipse47-devstudio
+```
+
 -------------
 
 
