Updated RHEL 7 instructions

--- a/1.SetupRedHatDevSuite.md
+++ b/1.SetupRedHatDevSuite.md
@@ -77,6 +77,24 @@ Click `Yes` when it asks "Do you want to allow this app to make changes to your 
 
 **On RHEL:**
 
+Register your system with your developer account
+
+```
+subscription-manager register
+```
+
+You're looking for the `Pool ID` of your `Developer Entitlement`
+
+```
+subscription-manager list --available --matches '*Developer*'
+```
+
+Attach to the corresponding `Pool ID`
+
+```
+subscription-manager attach --pool <pool id uuid>
+```
+
 Make sure you're subscribed to the proper channels
 
 ```
@@ -101,6 +119,8 @@ Now you can install the developer suite
 ```
 yum -y install rh-devsuite rh-eclipse47-devstudio
 ```
+
+For RHEL users; you don't have to go any further.
 
 -------------
 
