--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -237,6 +237,30 @@ You should now see OpenShift Catalog and a menu `My Project` under the list of p
 
 Congratulations!! You have started CDK and logged into OpenShift Webconsole provided by CDK.
 
+### RHEL Workstation
 
+If you're using a RHEL workstation; start the CDK with the following
 
+First, export your developer entitlement account
+```
+$ export MINISHIFT_USERNAME='<RED_HAT_USERNAME>'
+$ export MINISHIFT_PASSWORD='<RED_HAT_PASSWORD>'
+```
 
+Next, start minitshift 
+
+```
+$ minishift start
+```
+
+**NOTE:** This may prompt you for your workstation credentials.
+
+Obtain your minishift URL 
+
+```
+$ minishift console --url
+```
+
+Save this infomation as you'll need it.
+
+To launch Red Hat Eclipse navigate to `Applications ~> Programming ~> Red Hat Eclipse 4.7.x`
