Added RHEL image

--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -264,3 +264,4 @@ $ minishift console --url
 Save this infomation as you'll need it.
 
 To launch Red Hat Eclipse navigate to `Applications ~> Programming ~> Red Hat Eclipse 4.7.x`
+![](./images/2.StartJBDSRHEL.png)
