added workbench for rhel connecting to cdk

--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -265,3 +265,7 @@ Save this infomation as you'll need it.
 
 To launch Red Hat Eclipse navigate to `Applications ~> Programming ~> Red Hat Eclipse 4.7.x`
 ![](./images/2.StartJBDSRHEL.png)
+
+Once you've launched; set the workspace path (noted above). You can connect to your minishift cdk by clicking `OpenShift Application` on the workbench screen
+
+![](./images/2.ConnecToCDKRHEL.png)
