--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -269,3 +269,14 @@ To launch Red Hat Eclipse navigate to `Applications ~> Programming ~> Red Hat Ec
 Once you've launched; set the workspace path (noted above). You can connect to your minishift cdk by clicking `OpenShift Application` on the workbench screen
 
 ![](./images/2.ConnecToCDKRHEL.png)
+
+This brings up the following window
+
+![](./images/2.NewOCPappRHEL.png)
+
+Under `Server` add the output of `minishift console --url` that you got from above. It'll ask you to accept the cert
+
+![](./images/2.AcceptCertRHEL.png)
+
+Under `Authentication`; change the protocol to `Basic`, and enter `developer` for the `Username` and `openshift` for the `Password`. Make sure to tick `Save Password`
+![](./images/2.CDKJBDSRHELlogin.png)
