Finished RHEL portion

--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -280,3 +280,5 @@ Under `Server` add the output of `minishift console --url` that you got from abo
 
 Under `Authentication`; change the protocol to `Basic`, and enter `developer` for the `Username` and `openshift` for the `Password`. Make sure to tick `Save Password`
 ![](./images/2.CDKJBDSRHELlogin.png)
+
+Once you click `Next` it should log you in and ask what kind of application you want to create; you can go ahead and click `Cancel`
