added additional notes for windows

--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -30,6 +30,15 @@ Navigate to Servers tab. Right click on `Container Development Environment 3.2+`
 
 CDK setup task cleans up `.minishift` folder in your user home and recreates it. This will clean up any old data if you used minishift in the past. This `.minishift` hidden folder stores all the configuration information about your CDK set up on your work station.
 
+**Note** Sometimes you may see a permissions issue as below. This is noticed on Windows boxes. If it happens just run `Setup CDK` again and it should move on normally.
+
+```
+Setting up CDK 3 on host using 'C:/Users/veer/.minishift' as Minishift's home directory
+Existing VM deleted
+Error setting up CDK 3 environment: mkdir C:\Users\veer.minishift: Access is denied.
+
+```
+
 You'll see a warning about cleaning up the contents. Click `OK`.
 
 ![](./images/4.StartJBDS.jpeg)
@@ -55,7 +64,7 @@ Now let's copy the images. Navigate to the folder you copied from flash drive to
 $ cp -R images ~/.minishift/cache
 ```
 
-**On Windows** If you are using Cygwin, you may have to provide complete path as below:
+**On Windows** We suggest that you should use Windows File Explorer to copy images to .minishift folder. But if you are using Cygwin, you may have to provide complete path as below:
 
 ```
 $ cp -R images c:/users/<yourusername>/.minishift/cache
@@ -120,7 +129,9 @@ $ cat ~/.minishift/config/config.json
 ```
 $ minishift config set vm-driver virtualbox
 ```
+If you double click on the Containers Development Environment in the Servers Tab, you should see virtualbox as the vm-driver
 
+![](./images/11.StartJBDS.jpeg)
 
 ### Start CDK
 
@@ -232,10 +243,6 @@ You should now see OpenShift Catalog and a menu `My Project` under the list of p
 ![](./images/10.StartJBDS.jpeg)
 
 
-**Extra Credits:** Figure out how to stop CDK.
-
-
-Congratulations!! You have started CDK and logged into OpenShift Webconsole provided by CDK.
 
 ### RHEL Workstation
 
@@ -282,3 +289,10 @@ Under `Authentication`; change the protocol to `Basic`, and enter `developer` fo
 ![](./images/2.CDKJBDSRHELlogin.png)
 
 Once you click `Next` it should log you in and ask what kind of application you want to create; you can go ahead and click `Cancel`
+
+
+
+**Extra Credits:** Figure out how to stop CDK.
+
+
+Congratulations!! You have started CDK and logged into OpenShift Webconsole provided by CDK.
