--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -15,6 +15,8 @@ Start JBDS (Red Sphere Icon) from your application menu. The application starts 
 
 **Note** On windows this location shows up as `C:\Users\<username>\workspace`
 
+**Note** If you're using RHEL, you can find those instructions [HERE](#rhel-workstation)
+
 ![](./images/1.StartJBDS.jpeg)
 
 JBDS comes up and you will see the following screen. Spend a couple of minutes to understand the layout.
@@ -22,6 +24,7 @@ JBDS comes up and you will see the following screen. Spend a couple of minutes t
 ![](./images/2.StartJBDS.jpeg)
 
 Since we also installed CDK, you'll see `Container Development Environment 3.2+` in  `Servers` tab.
+
 
 ### Setup CDK
 
