--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -257,7 +257,9 @@ $ export MINISHIFT_USERNAME='<RED_HAT_USERNAME>'
 $ export MINISHIFT_PASSWORD='<RED_HAT_PASSWORD>'
 ```
 
-Next, start minitshift 
+**IMPORTANT** perform the steps outlined in the [Setup CDK](#setup-cdk) that sets up caching of the images.
+
+After that, start minitshift 
 
 ```
 $ minishift start
