added import images step

--- a/3.InstallRHOARLaunchPad.md
+++ b/3.InstallRHOARLaunchPad.md
@@ -13,6 +13,70 @@ We will use a minishift addon to create this launcher.
 Start CDK based on what you learnt in the last lab
 Open a terminal to run commands using CLI.
 
+### Import Images for Fabric8 Launcher
+
+We are doing this step so that minishift doesn't try to download images using internet (which could be slow during the workshop). This will save some time for us.
+
+List the images available to minishift by running `minishift images list`. You will see the following. You copied them into cache earlier
+
+``` 
+$ minishift images list
+docker.io/fabric8/configmapcontroller:2.3.7
+docker.io/fabric8/launcher-backend:latest
+docker.io/fabric8/launcher-frontend:latest
+registry.access.redhat.com/openshift3/ose-deployer:v3.9.14
+registry.access.redhat.com/openshift3/ose-docker-registry:v3.9.14
+registry.access.redhat.com/openshift3/ose-haproxy-router:v3.9.14
+registry.access.redhat.com/openshift3/ose-pod:v3.9.14
+registry.access.redhat.com/openshift3/ose-web-console:v3.9.14
+registry.access.redhat.com/openshift3/ose:v3.9.14
+```
+
+Now list the images available inside the minishift VM by running ` minishift images list --vm`. You will see that certain images are not pulled into minishift vm.
+
+```
+$ minishift images list --vm
+registry.access.redhat.com/openshift3/ose-deployer:v3.9.14
+registry.access.redhat.com/openshift3/ose-docker-registry:v3.9.14
+registry.access.redhat.com/openshift3/ose-haproxy-router:v3.9.14
+registry.access.redhat.com/openshift3/ose-pod:v3.9.14
+registry.access.redhat.com/openshift3/ose-web-console:v3.9.14
+registry.access.redhat.com/openshift3/ose:v3.9.14
+```
+
+Let us import them now with the following command
+
+```
+minishift images import \
+ docker.io/fabric8/configmapcontroller:2.3.7 \
+ docker.io/fabric8/launcher-backend:latest \
+ docker.io/fabric8/launcher-frontend:latest
+```
+
+Observe the following output
+```
+   Importing 'docker.io/fabric8/configmapcontroller:2.3.7' . OK
+   Importing 'docker.io/fabric8/launcher-backend:latest' ........ OK
+   Importing 'docker.io/fabric8/launcher-frontend:latest' ..... OK
+```
+
+Now list the images in the vm again
+
+```
+$ minishift images list --vm
+docker.io/fabric8/configmapcontroller:2.3.7
+docker.io/fabric8/launcher-backend:latest
+docker.io/fabric8/launcher-frontend:latest
+registry.access.redhat.com/openshift3/ose-deployer:v3.9.14
+registry.access.redhat.com/openshift3/ose-docker-registry:v3.9.14
+registry.access.redhat.com/openshift3/ose-haproxy-router:v3.9.14
+registry.access.redhat.com/openshift3/ose-pod:v3.9.14
+registry.access.redhat.com/openshift3/ose-web-console:v3.9.14
+registry.access.redhat.com/openshift3/ose:v3.9.14
+```
+
+Now we are good with all images.
+
 ### Install Fabric8 Launcher Addon
 
 Navigate to the folder where you copied the flash drive contents. Then change into `addons` folder. Run the following command to install Fabric8 Launcher
