--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -251,13 +251,79 @@ You should now see OpenShift Catalog and a menu `My Project` under the list of p
 
 If you're using a RHEL workstation; start the CDK with the following
 
-First, export your developer entitlement account
+Export your developer entitlement account
 ```
 $ export MINISHIFT_USERNAME='<RED_HAT_USERNAME>'
 $ export MINISHIFT_PASSWORD='<RED_HAT_PASSWORD>'
 ```
 
-**IMPORTANT** perform the steps outlined in the [Setup CDK](#setup-cdk) that sets up caching of the images.
+Let us first run a command to check the images available to minishift
+
+```
+$ minishift images list
+```
+The output should be empty.
+
+Now let's copy the images. Navigate to the folder you copied from flash drive to your workstation and execute this copy command to copy the `images` folder to `cache` folder in the `.minishift` folder. This will create an `images` folder and copy all its contents.
+
+```
+$ cp -R images ~/.minishift/cache
+```
+
+Now run check the images list again. This time it should display a bunch of images as shown below. If you did not copy these images, minishift/cdk will try to download them from Red Hat's registry on the fly and that may take a lot of time depending on the bandwidth. But if you are at home, you should be fine.
+
+```
+$ minishift images list
+registry.access.redhat.com/openshift3/ose-deployer:v3.9.14
+registry.access.redhat.com/openshift3/ose-docker-registry:v3.9.14
+registry.access.redhat.com/openshift3/ose-haproxy-router:v3.9.14
+registry.access.redhat.com/openshift3/ose-pod:v3.9.14
+registry.access.redhat.com/openshift3/ose-web-console:v3.9.14
+registry.access.redhat.com/openshift3/ose:v3.9.14
+```
+
+Next we will size the minishift VM in terms of CPU and Memory. The default allocation would be insufficient for our subsequent labs. So let us increase a little bit. 
+
+**Note** You need enough capacity on your workstation to do this.
+
+Let's set the memory to 8GB and CPUs to 2 cores for your virtual machine by running the following commands
+
+```
+$ minishift config set memory 8192
+No Minishift instance exists. New 'memory' setting will be applied on next 'minishift start'
+
+$ minishift config set cpus 2
+No Minishift instance exists. New 'cpus' setting will be applied on next 'minishift start'
+```
+
+As explained before the entire configuration of your CDK is saved inside `.minishift` folder. Verify your settings in the `.minishift/config/config.json` file.
+
+```
+$ cat ~/.minishift/config/config.json
+{
+    "addons": {
+        "admin-user": {
+            "Enabled": true,
+            "Name": "admin-user",
+            "Priority": 0
+        },
+        "anyuid": {
+            "Enabled": true,
+            "Name": "anyuid",
+            "Priority": 0
+        },
+        "xpaas": {
+            "Enabled": true,
+            "Name": "xpaas",
+            "Priority": 0
+        }
+    },
+    "iso-url": "file:///Users/veer/.minishift/cache/iso/minishift-rhel7.iso",
+    "memory": "8192",
+    "vm-driver": "xhyve"
+}
+
+```
 
 After that, start minitshift 
 
