--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -333,15 +333,14 @@ $ minishift start
 
 **NOTE:** This may prompt you for your workstation credentials.
 
-Obtain your minishift URL 
+Obtain your minishift URL (Save this infomation as you'll need it.)
 
 ```
 $ minishift console --url
 ```
 
-Save this infomation as you'll need it.
-
 To launch Red Hat Eclipse navigate to `Applications ~> Programming ~> Red Hat Eclipse 4.7.x`
+
 ![](./images/2.StartJBDSRHEL.png)
 
 Once you've launched; set the workspace path (noted above). You can connect to your minishift cdk by clicking `OpenShift Application` on the workbench screen
@@ -357,6 +356,7 @@ Under `Server` add the output of `minishift console --url` that you got from abo
 ![](./images/2.AcceptCertRHEL.png)
 
 Under `Authentication`; change the protocol to `Basic`, and enter `developer` for the `Username` and `openshift` for the `Password`. Make sure to tick `Save Password`
+
 ![](./images/2.CDKJBDSRHELlogin.png)
 
 Once you click `Next` it should log you in and ask what kind of application you want to create; you can go ahead and click `Cancel`
