added a little more to wildfly lab

--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -122,12 +122,35 @@ Now, let us deploy this application to OpenShift and test it.
 
 ### Deploying Application into OpenShift
 
-* Lets first create a project/namespace that our new wildfly swarm based apps gets deployed to. Open a terminal and run the following CLI commands
+* Lets first create a project/namespace on openshift where will deploy wildfly swarm based apps. Open a terminal and run the following commands on CLI:
 
 ```
-$ oc new-project --display-name="wildflyswarmapps" --description="wildflyswarmapps"
+$ oc new-project wildflyswarmapps --display-name="wildflyswarmapps" --description="wildflyswarmapps"
 
 ```
+
+Now lets deploy our new wildflyswarm-adj app from JBDS.
+
+* Right click on the project `wildflyswarm-adj` ->`Run As` -> `Run Configurations`
+![](./images/7.WildFlySwarm.jpeg)	
+
+* Then choose `Maven_Build` -> `New_Configuration` :
+
+	* Name: `wildflyswarm-adj-deploy`	
+	* BaseDirectory: `workspace`->`select wildflyswarm-adj`	
+	* Goals: `clean fabric8:deploy -Popenshift`
+  Then click on `Run`
+  
+* Watch the build logs in Console tab. The build runs for a couple of minutes, runs test cases,  and you should see the following at the end.
+
+```
+
+```	
+
+
+
+
+
 
 
 
