replaced image import with image cache in lab 2

--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -47,7 +47,7 @@ You'll see a warning about cleaning up the contents. Click `OK`.
 ![](./images/4.StartJBDS.jpeg)
 
 
-CDK runs OpenShift and other components as containers. We have pre-downloaded openshift images and provided the on the flash drive for you. This will save you on start up time in case internet is slow or in low network bandwidth situations. 
+CDK runs OpenShift and other components as containers. We have pre-downloaded openshift images and provided the on the flash drive for you. **This will save you on start up time in case internet is slow or in low network bandwidth situations.**
 
 In order to use these pre-downloaded images let's run some commands from your terminal.
 
@@ -77,12 +77,48 @@ Now run check the images list again. This time it should display a bunch of imag
 
 ```
 $ minishift images list
+docker.io/fabric8/configmapcontroller:2.3.7
+docker.io/fabric8/launcher-backend:latest
+docker.io/fabric8/launcher-frontend:latest
 registry.access.redhat.com/openshift3/ose-deployer:v3.9.14
 registry.access.redhat.com/openshift3/ose-docker-registry:v3.9.14
 registry.access.redhat.com/openshift3/ose-haproxy-router:v3.9.14
 registry.access.redhat.com/openshift3/ose-pod:v3.9.14
 registry.access.redhat.com/openshift3/ose-web-console:v3.9.14
 registry.access.redhat.com/openshift3/ose:v3.9.14
+registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:latest
+```
+
+The next command will set the Minishift VM to use the cache for images instead of going to internet
+
+```
+$ minishift image cache-config add \
+ docker.io/fabric8/configmapcontroller:2.3.7 \
+ docker.io/fabric8/launcher-backend:latest \
+ docker.io/fabric8/launcher-frontend:latest \
+ registry.access.redhat.com/openshift3/ose-deployer:v3.9.14 \
+ registry.access.redhat.com/openshift3/ose-docker-registry:v3.9.14 \
+ registry.access.redhat.com/openshift3/ose-haproxy-router:v3.9.14 \
+ registry.access.redhat.com/openshift3/ose-pod:v3.9.14 \
+ registry.access.redhat.com/openshift3/ose-web-console:v3.9.14 \
+ registry.access.redhat.com/openshift3/ose:v3.9.14 \
+ registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:latest
+```
+
+Verify that the cache-config is updated
+
+```
+$ minishift image cache-config view
+docker.io/fabric8/configmapcontroller:2.3.7
+docker.io/fabric8/launcher-backend:latest
+docker.io/fabric8/launcher-frontend:latest
+registry.access.redhat.com/openshift3/ose-deployer:v3.9.14
+registry.access.redhat.com/openshift3/ose-docker-registry:v3.9.14
+registry.access.redhat.com/openshift3/ose-haproxy-router:v3.9.14
+registry.access.redhat.com/openshift3/ose-pod:v3.9.14
+registry.access.redhat.com/openshift3/ose-web-console:v3.9.14
+registry.access.redhat.com/openshift3/ose:v3.9.14
+registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:latest
 ```
 
 Next we will size the minishift VM in terms of CPU and Memory. The default allocation would be insufficient for our subsequent labs. So let us increase a little bit. 
