using direct openshift

--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -19,133 +19,100 @@ http://www.literarygenius.info/a1-shakespearean-insults-generator.htm
 ### Create Project Bundle with Fabric8 Launcher
 * Start the Launcher, if you haven't already done so previously.
 * Click on ‘Launch Your Project ‘
-* Launcher will prompt you to login. You can type in your `developers.redhat.com` credentials to login.
-* Select Deployment type  `I will build and run locally`
 ![](./images/1.WildFlySwarm.jpeg)
-* Select mission `Rest API Level 0` can click `Next` to continue. Mission Control, as the name suggests, coordinates actions among dependent services. Its responsibility is to take the following inputs:
-	* 	A GitHub Project
-	* 	A GitHub project	
-	* 	A GitHub user (via OAuth token)	
-	* 	An OpenShift instance's API URL	
-	* 	An OpenShift user (via OAuth token)	
+* Launcher will prompt you to login. You can type in your `developers.redhat.com` credentials to login.
 
-	And performs the following actions:	
+* Select the Deployment type  `Use OpenShift`
+![](./images/2.WildFlySwarm.jpeg)
+
+* Select mission `Rest API Level 0` can click `Next` to continue. 
+
+--------------
+
 	
-	* 	Fork the GitHub project into the GitHub user's namespace	
-	* Create an OpenShift project	
-	* Create a Jenkins Pipeline BuildConfig	
-	* Associate the OpenShift project with the newly-forked GitHub repo	
-	* Create a GitHub webhook on the newly-forked GitHub project to register push events to the OpenShift project	
+--------------------
 
 * On the next screen select ‘Wildfly Swarm’ as the Runtime and hit ‘ Next’
+
 ![](./images/3.WildFlySwarm.jpeg)	
 
-* On the next screen add the following values for the parameters
+* On the next screen `Project Info` page, click on `Additional Parameters` to see all paramters, and add the following parameters
 
-	* Runtime Version: 2018.3.3 
-	* GroupId - io.openshift.booster
-	* ArtifactId - wildflyswarm-adj
-	* Version - 1.0.0-SNAPSHOT
+	* Runtime Version: `2018.3.3` 
+	* OpenShift Project Name: <yourusername>-`wildflyswarm-adj`
+	* GroupId - `io.openshift.booster`
+	* ArtifactId - `wildflyswarm-adj`
+	* Version - `1.0.0-SNAPSHOT`
+
+	
 ![](./images/4.WildFlySwarm.jpeg)	
 
-**Note** Please use the above values as we'll be using then throught the lab.
+**Note** Please use the above values as we'll be using then throughout the lab.
 
-* Review Summary on the next page and press on `Download as Zip File` button.
+* Next on `Review Summary` page, review the contents and press on `Launch on OpenShift` button.
 
 ![](./images/5.WildFlySwarm.jpeg)	
 
-Your application bundle will be downloaded as `wildflyswarm-adj.zip`.
+Fabric8 Launcher coordinates actions among dependent services. It takes the following inputs that you filled above:
+
+* 	A GitHub Project
+* 	A GitHub user (via OAuth token)	
+* 	An OpenShift instance's API URL	
+* 	An OpenShift user (via OAuth token)	
+
+And it performs the following actions:	
+
+* Fork the GitHub template project into the GitHub user's namespace
+* Create an OpenShift project		
+* Associate the OpenShift project with the newly-forked GitHub repo
+* Create a GitHub webhook on the newly-forked GitHub project to register push events to the OpenShift project	
+![](./images/6.WildFlySwarm.jpeg)	
+
+Press on `Next` button.
 
 * You should see the next step as shown below
-![](./images/6.WildFlySwarm.jpeg)	
+![](./images/7.WildFlySwarm.jpeg)	
+
+Click on the link `Take a look at your build`, it will take you to the project on the Web Console. You will see the application with name `wfswarm-rest-http`. Expand this application tab by pressing on `>` symbol right next to its name. 
+
+You'll observe that the build is running. It would be downloading dependencies from maven while running the build.
+
+So, the launcher has automatically deployed an application and started a new build.
+
+![](./images/8.WildFlySwarm.jpeg)	
+
+Also look at your github home page. You will see that launcher has created a repository with source code for you with the name `wildflyswarm-adj`. 
+
+Wow, you now have template code to begin your first cloud native application!!!
+
 
 ### Import Project to JBoss Developer Studio
 
-*  Run the following command to unzip the downloaded project bundle, or you can just double click
+Let us now import this code into your IDE. Get into JBDS
 
-```
-$ unzip wildflyswarm-adj.zip
-```
-Note the location of your unzipped file.
+* Right Click in the `Project Explorer` area and select `Import`-> `Import`. You'll see the following window where you'll navigate to `OpenShift` folder and `Existing OpenShift Application`
 
-* Open JBoss Developer Studio (Redsphere Icon) 
-* Choose the following menu options to import the project
-`File` ->`Import`-> `Maven` ->`Existing Maven Projects` , `Browse` to the location where the unzipped project is and select the project. (Most likely you may have unzipped it in the `Downloads` folder!!)
+![](./images/9.WildFlySwarm.jpeg)	
 
-* Explore the project i.e, expand `wildflyswarm-adj` project and look at `src/main/java` 
+Click on Next. It should display a window to `Sign in to OpenShift`. Your openshift connection information to CDK should all be pre-configured for you.. Yeah!! Click on `Next` 
 
-Explore the following auto-generated code (by the launcher):
-* GreetingEndpoint.java
+![](./images/10.WildFlySwarm.jpeg)
 
-```
-package io.openshift.booster;
+Now it should show you the list of projects running on your openshift cluster. Let us select the project that is hosting wildflyswarm-adj project
 
-import javax.ws.rs.GET;
-import javax.ws.rs.Path;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
+![](./images/11.WildFlySwarm.jpeg)
 
-@Path("/")
-public class GreetingEndpoint {
+and once it expands select `wildflyswam-rest-http` application and press on `Next` button.
 
-    private static final String template = "Hello, %s!";
+On the next page choose the `default clone destination` or if you want to use a different location and click on `Finish`.
+![](./images/12.WildFlySwarm.jpeg)
 
-    @GET
-    @Path("/greeting")
-    @Produces("application/json")
-    public Greeting greeting(@QueryParam("name") String name) {
-        String suffix = name != null ? name : "World";
-        return new Greeting(String.format(template, suffix));
-    }
-}
+This will import project to your JBDS and you'll see the project in the project explorer.
 
-```
+![](./images/13.WildFlySwarm.jpeg)
 
-* ApplicationConfig is an auto generated class for Resource Entrypoint
 
-```
-package io.openshift.booster;
-
-import javax.ws.rs.ApplicationPath;
-import javax.ws.rs.core.Application;
-
-/**
- * Resource entry point
- */
-@ApplicationPath("/api")
-public class ApplicationConfig extends Application {
-
-}
-```
-
-Now, let us deploy this application to OpenShift and test it.
-
-### Deploying Application into OpenShift
-
-* Lets first create a project/namespace on openshift where will deploy wildfly swarm based apps. Open a terminal and run the following commands on CLI:
-
-```
-$ oc new-project wildflyswarmapps --display-name="wildflyswarmapps" --description="wildflyswarmapps"
-
-```
-
-Now lets deploy our new wildflyswarm-adj app from JBDS.
-
-* Right click on the project `wildflyswarm-adj` ->`Run As` -> `Run Configurations`
-![](./images/7.WildFlySwarm.jpeg)	
-
-* Then choose `Maven_Build` -> `New_Configuration` :
-
-	* Name: `wildflyswarm-adj-deploy`	
-	* BaseDirectory: `workspace`->`select wildflyswarm-adj`	
-	* Goals: `clean fabric8:deploy -Popenshift`
-  Then click on `Run`
-  
-* Watch the build logs in Console tab. The build runs for a couple of minutes, runs test cases,  and you should see the following at the end.
-
-```
-
-```	
+	
 
 
 
