cache image list changed

--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -199,7 +199,7 @@ You should see logs as below:
    Disk size: 20 GB
 -- Starting Minishift VM ................ OK
 -- Registering machine using subscription-manager
-   Registration in progress ............ OK [26s]
+   Registration in progress .......... OK [20s]
 -- Checking for IP address ... OK
 -- Checking for nameservers ... OK
 -- Checking if external host is reachable from the Minishift VM ... 
@@ -208,9 +208,15 @@ You should see logs as below:
    Retrieving http://minishift.io/index.html ... OK
 -- Checking if persistent storage volume is mounted ... OK
 -- Checking available disk space ... 1% used OK
-   Importing 'registry.access.redhat.com/openshift3/ose:v3.9.14' .......... OK
+   Importing 'docker.io/fabric8/configmapcontroller:2.3.7' . OK
+   Importing 'docker.io/fabric8/launcher-backend:latest' ....... OK
+   Importing 'docker.io/fabric8/launcher-frontend:latest' .... OK
+   Importing 'registry.access.redhat.com/openshift3/ose-deployer:v3.9.14' .......... OK
    Importing 'registry.access.redhat.com/openshift3/ose-docker-registry:v3.9.14' .. OK
-   Importing 'registry.access.redhat.com/openshift3/ose-haproxy-router:v3.9.14' ... OK
+   Importing 'registry.access.redhat.com/openshift3/ose-haproxy-router:v3.9.14' .. OK
+   Importing 'registry.access.redhat.com/openshift3/ose-pod:v3.9.14' . OK
+   Importing 'registry.access.redhat.com/openshift3/ose-web-console:v3.9.14' .. OK
+   Importing 'registry.access.redhat.com/openshift3/ose:v3.9.14' .. OK
 -- OpenShift cluster will be configured with ...
    Version: v3.9.14
 Using nsenter mounter for OpenShift volumes
@@ -257,9 +263,15 @@ While minishift comes up you'll be prompted to accepted untrusted certificate. C
 **Note** from the above logs the following import steps are successful indicating that the images are imported from the cache instead of being downloaded via internet.
 
 ```
-Importing 'registry.access.redhat.com/openshift3/ose:v3.9.14' .......... OK
+   Importing 'docker.io/fabric8/configmapcontroller:2.3.7' . OK
+   Importing 'docker.io/fabric8/launcher-backend:latest' ....... OK
+   Importing 'docker.io/fabric8/launcher-frontend:latest' .... OK
+   Importing 'registry.access.redhat.com/openshift3/ose-deployer:v3.9.14' .......... OK
    Importing 'registry.access.redhat.com/openshift3/ose-docker-registry:v3.9.14' .. OK
-   Importing 'registry.access.redhat.com/openshift3/ose-haproxy-router:v3.9.14' ... OK
+   Importing 'registry.access.redhat.com/openshift3/ose-haproxy-router:v3.9.14' .. OK
+   Importing 'registry.access.redhat.com/openshift3/ose-pod:v3.9.14' . OK
+   Importing 'registry.access.redhat.com/openshift3/ose-web-console:v3.9.14' .. OK
+   Importing 'registry.access.redhat.com/openshift3/ose:v3.9.14' .. OK
 ```
 
 Also note the URL for the webconsole and the credentials to log into CDK. Once  minishift comes up you will be taken to `OpenShift Explorer` tab where you'll find a link to the OpenShift Cluster. Click in to navigate and see that there is a project named `My Project` created by default
