--- a/2.SetupCDKFromJBDS.md
+++ b/2.SetupCDKFromJBDS.md
@@ -330,6 +330,22 @@ registry.access.redhat.com/openshift3/ose-web-console:v3.9.14
 registry.access.redhat.com/openshift3/ose:v3.9.14
 ```
 
+Now add the cache to the config
+```
+$ minishift image cache-config add \
+ docker.io/fabric8/configmapcontroller:2.3.7 \
+ docker.io/fabric8/launcher-backend:latest \
+ docker.io/fabric8/launcher-frontend:latest \
+ registry.access.redhat.com/openshift3/ose-deployer:v3.9.14 \
+ registry.access.redhat.com/openshift3/ose-docker-registry:v3.9.14 \
+ registry.access.redhat.com/openshift3/ose-haproxy-router:v3.9.14 \
+ registry.access.redhat.com/openshift3/ose-pod:v3.9.14 \
+ registry.access.redhat.com/openshift3/ose-web-console:v3.9.14 \
+ registry.access.redhat.com/openshift3/ose:v3.9.14 \
+ registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:latest
+
+```
+
 Next we will size the minishift VM in terms of CPU and Memory. The default allocation would be insufficient for our subsequent labs. So let us increase a little bit. 
 
 **Note** You need enough capacity on your workstation to do this.
