patches to change imagePullPolicy

--- a/3.InstallRHOARLaunchPad.md
+++ b/3.InstallRHOARLaunchPad.md
@@ -45,6 +45,8 @@ Addon 'fabric8-launcher' installed
 
 ### Deploy the Launcher
 
+**Note** When you run the step below, it will deploy launcher. But launcher's deployment configuration tries to download the latest container images from dockerhub based on their default setting i.e, `ImagePullPolicy=Always`. Image pull will take some time on the network here due to low bandwidth. To make it faster and not wait, we will force the deployment configuration to use the available images. So you will immediately cancel the deployment and change the `ImagePullPolicy=IfNotPresent` in the deployment configuration.
+
 To deploy the launcher you need supply your github username and github token you noted in the previous step. Run the following command substituting the values.
 
 ```
@@ -60,6 +62,49 @@ You'll see a response like below
 ```
 
 This creates a project with name `rhoarpad` and spins up the launcher in that project. 
+
+Immediately run the following commands to cancel the deployments and edit the deployment configurations so that you can use the cached images.
+
+```
+$ oc rollout cancel dc/launcher-backend
+```
+
+You'll get the following output
+```
+deploymentconfig "launcher-backend" cancelling
+```
+
+Next run
+```
+$ oc rollout cancel dc/launcher-frontend
+```
+
+You'll get the following output
+```
+deploymentconfig "launcher-frontend" cancelling
+```
+
+Now run the following two patches to update the deployment configurations:
+
+```
+oc patch dc launcher-backend -n rhoarpad --patch '{"spec": {"template": {"spec": {"containers": [{"name": "launcher-backend", "imagePullPolicy": "IfNotPresent"}]}}}}'
+```
+you should see the following nessage
+```
+deploymentconfig "launcher-backend" patched
+```
+
+Then run, 
+
+```
+$ oc patch dc launcher-frontend -n rhoarpad --patch '{"spec": {"template": {"spec": {"containers": [{"name": "launcher-frontend", "imagePullPolicy": "IfNotPresent"}]}}}}'
+```
+
+You should see the following message
+```
+deploymentconfig "launcher-frontend" patched
+```
+
 
 Navigate to the project in the web console and you'll see the following in a couple of minutes.
 
