--- a/3.InstallRHOARLaunchPad.md
+++ b/3.InstallRHOARLaunchPad.md
@@ -66,7 +66,7 @@ This creates a project with name `rhoarpad` and spins up the launcher in that pr
 Immediately run the following commands to cancel the deployments and edit the deployment configurations so that you can use the cached images.
 
 ```
-$ oc rollout cancel dc/launcher-backend
+$ oc rollout cancel dc/launcher-backend -n rhoarpad
 ```
 
 You'll get the following output
@@ -76,7 +76,7 @@ deploymentconfig "launcher-backend" cancelling
 
 Next run
 ```
-$ oc rollout cancel dc/launcher-frontend
+$ oc rollout cancel dc/launcher-frontend -n rhoarpad
 ```
 
 You'll get the following output
@@ -87,7 +87,7 @@ deploymentconfig "launcher-frontend" cancelling
 Now run the following two patches to update the deployment configurations:
 
 ```
-oc patch dc launcher-backend -n rhoarpad --patch '{"spec": {"template": {"spec": {"containers": [{"name": "launcher-backend", "imagePullPolicy": "IfNotPresent"}]}}}}'
+oc patch dc launcher-backend -n rhoarpad --patch '{"spec": {"template": {"spec": {"containers": [{"name": "launcher-backend", "imagePullPolicy": "IfNotPresent"}]}}}}' -n rhoarpad
 ```
 you should see the following nessage
 ```
@@ -97,7 +97,7 @@ deploymentconfig "launcher-backend" patched
 Then run, 
 
 ```
-$ oc patch dc launcher-frontend -n rhoarpad --patch '{"spec": {"template": {"spec": {"containers": [{"name": "launcher-frontend", "imagePullPolicy": "IfNotPresent"}]}}}}'
+$ oc patch dc launcher-frontend -n rhoarpad --patch '{"spec": {"template": {"spec": {"containers": [{"name": "launcher-frontend", "imagePullPolicy": "IfNotPresent"}]}}}}' -n rhoarpad
 ```
 
 You should see the following message
