--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -143,6 +143,7 @@ Now lets deploy our new wildflyswarm-adj app from JBDS.
   
 * Watch the build logs in Console tab. The build runs for a couple of minutes, runs test cases,  and you should see the following at the end.
 
+![](./images/wildflyswarm-adj-first-build.png)
 ```
 
 ```	
