--- a/5.WildflyRestServices.md
+++ b/5.WildflyRestServices.md
@@ -145,6 +145,10 @@ Now lets deploy our new wildflyswarm-adj app from JBDS.
 
 ![](./images/wildflyswarm-adj-first-build.png)
 ```
+### Validating Application on OpenShift
+
+
+
 
 ```	
 
